# thiago_pavao_embarcatech_HBr_2025

./: README.md
projetos/BitDogAcademy/: CMakeLists.txt  README.md  ws2818b.pio
projetos/BitDogAcademy/activities/: math_integer_division.c  state_machine.h
projetos/BitDogAcademy/docs/: diagramas.drawio
projetos/BitDogAcademy/fonts/: BMSPA_font.c  acme_5_outlines_font.c  acme_5_outlines_font.h  bubblesstandard_font.c  bubblesstandard_font.h  crackers_font.c  crackers_font.h
projetos/BitDogAcademy/inc/: buttons.h  buzzer.h  joystick.c  neopixel.c  neopixel.h  tests.h
projetos/BitDogAcademy/src/: BitDogAcademy.c
projetos/BitDogAcademy/src/activities/: math_integer_division.h  (+1 more)
projetos/ContadorDecrescente/: README.md
projetos/ContadorDecrescente/src/: CMakeLists.txt  ContadorDecrescente.c
projetos/GaltonBoard/: CMakeLists.txt  README.md  main.c
projetos/GaltonBoard/app/: ball.c  histogram.c  main.c  simulation.c  util.c
projetos/GaltonBoard/inc/: ball.c  histogram.c  histogram.h  ssd1306.c
projetos/GaltonBoard/include/: ball.h  config.h  histogram.h  joystick.h  simulation.h  util.h
projetos/Joystick/: CMakeLists.txt  Joystick.c  README.md
projetos/Joystick/src/: CMakeLists.txt  Joystick.c
projetos/LedEmbutido/: CMakeLists.txt  README.md
projetos/LedEmbutido/drivers/: led_embutido.c
projetos/LedEmbutido/include/: hal_led.h
projetos/TemperaturaInterna/: CMakeLists.txt  README.md
projetos/TemperaturaInterna/src/: CMakeLists.txt  TemperaturaInterna.c  run_tests.sh
projetos/TemperaturaInterna/src/test/: CMakeLists.txt  test.c  test.h
(+13 files in other folders)
